<resources>
    <string name="app_name">Tripit</string>
    <string name="prompt_username">שם משתמש</string>
    <string name="fullname">שם פרטי ושם משפחה</string>
    <string name="prompt_password">סיסמה</string>
    <string name="prompt_email">כתובת דואר אלקטרוני</string>
    <string name="prompt_repeat_password">חזור על הסיסמה שנית</string>
    <string name="remmber_me">לזכור אותך?</string>
    <string name="action_sign_in">התחברות</string>
    <string name="or">או התחבר באמצעות</string>
    <string name="not_register">אינך רשום?</string>
    <string name="action_register"><u>להרשמה</u></string>
    <string name="register"><u>הרשם עכשיו</u></string>
    <string name="register_title"><u>הרשמה</u></string>
    <string name="facebook">התחבר/י באמצעות Facebook</string>
    <string name="Google">התחבר/י באמצעות Google</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">שם המשתמש אינו נמצא במערכת</string>
    <string name="invalid_password">ססמתך צריכה להיות גדולה מ-5 תווים</string>
    <string name="login_failed">"ההתחברות כשלה"</string>
    <string name="login_admin_title">ברוך הבא בוס.</string>
    <string name="login_admin_problem">יש בעיה בהתחברות?</string>
    <string name="flight_purposes">בחר את מטרות הטיסה שלך</string>
    <string name="partner_type">באיזה שותף אתה מעוניין?</string>
    <string name="date_flight1">תאריך יציאה</string>
    <string name="date_flight2">תאריך חזרה</string>
    <string name="choose">בחר</string>
    <string name="chooseYourOptions">בחר סוגי טיול</string>
    <string name="icon"></string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="destination">בבקשה כתוב את יעדך:</string>
    <string name="input_destination">כתוב כאן.</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="facebook_app_id">1046481372536918</string>
    <string name="fb_login_protocol_scheme">fb1046481372536918</string>
    <string name="search_flight">מועד טיסה</string>
    <string name="date_specific_search">תאריך מדוייק</string>
    <string name="date_range_search">גמיש בתאריכים</string>
    <string name="gender_chooser">בחר מין מועדף</string>
    <string name="age_range_chooser">בחר טווח גילאים מועדף</string>
    <string name="search">חפש</string>
    <string name="your_favourite_posts">רשימת הפוסטים שהתעניינת בהם:</string>

</resources>
