<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchPostActivity">

    <TextView
        android:id="@+id/txt_flight_purpose"
        android:layout_width="268dp"
        android:layout_height="30dp"
        android:layout_marginTop="23dp"
        android:text="@string/flight_purposes"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_gender" />

    <Button
        android:id="@+id/search_date_range_input"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/date_range_search"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_search_date" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_destination"
        android:layout_width="232dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:text="@string/destination"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <com.hbb20.CountryCodePicker
        android:id="@+id/autocomp_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ccp_showFullName="true"
        app:ccp_showPhoneCode="false"
        app:ccp_showNameCode="false"
        app:ccp_rememberLastSelection="true"
        app:ccp_countryPreference="US,DE,NL,GR,FR,ES"
        app:ccp_defaultNameCode="IL"
        app:ccp_defaultLanguage="HEBREW"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_destination" />
    <TextView
        android:id="@+id/btn_search_date"
        android:layout_width="159dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:text="@string/search_flight"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autocomp_destination" />

    <Button
        android:id="@+id/search_date_specific_input"
        android:layout_width="178dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="44dp"
        android:text="@string/date_specific_search"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toEndOf="@+id/search_date_range_input"
        app:layout_constraintTop_toBottomOf="@+id/btn_search_date" />

    <Button
        android:id="@+id/btn_trip_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/chooseYourOptions"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_flight_purpose" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="166dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_age_range"
        android:layout_width="152dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:text="@string/age_range_chooser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_date_specific_input" />

    <Button
        android:id="@+id/btn_gender"
        android:layout_width="152dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/gender_chooser"
        app:layout_constraintEnd_toStartOf="@+id/btn_age_range"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_date_range_input" />


</androidx.constraintlayout.widget.ConstraintLayout>