<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wings"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/activity_register_title"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/heebo_extra_bold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/register_title"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="157dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/activity_register_title"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_title"
        app:srcCompat="@drawable/profile" />

    <!--EditText for username-->


    <TextView
        android:id="@+id/activity_register_subtitle"
        android:layout_width="355dp"
        android:layout_height="75dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/heebo_bold"
        android:text="הצטרפו אלינו,\nונתחיל לתכנן ביחד את החוויה המטורפת הבאה שלכם!"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile" />

    <android.widget.EditText
        android:id="@+id/fullname"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:layout_marginTop="230dp"
        android:background="@drawable/button_selector"
        android:backgroundTint="#DFDDDD"
        android:fontFamily="@font/heebo_bold"
        android:hint="@string/fullname"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile" />

    <android.widget.EditText
        android:id="@+id/email"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/button_selector"
        android:backgroundTint="#DFDDDD"
        android:fontFamily="@font/heebo_bold"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile" />

    <android.widget.EditText
        android:id="@+id/password"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:backgroundTint="#DFDDDD"
        android:fontFamily="@font/heebo_bold"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <android.widget.EditText
        android:id="@+id/repeat_password"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:backgroundTint="#DFDDDD"
        android:fontFamily="@font/heebo_bold"
        android:hint="@string/prompt_repeat_password"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <android.widget.Button
        android:id="@+id/register_now"
        android:layout_width="178dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="205dp"
        android:background="@drawable/button_gradient_4"
        android:fontFamily="@font/heebo_extra_bold"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password" />

</androidx.constraintlayout.widget.ConstraintLayout>